--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,6 +42,14 @@ section > h1 {
   color: var(--background);
 }
 
+dialog > h1 {
+  font-size: 5em;
+  text-shadow: 0 0 2rem var(--pink);
+  font-weight: 400;
+  padding: 1rem 0;
+  color: var(--background);
+}
+
 #main-container {
   background: var(--current-line);
   height: 50em;
@@ -79,10 +87,11 @@ section > h1 {
 }
 
 dialog {
+  top: 2.5%;
   background: var(--background);
   margin: auto auto;
-  width: 80vw;
-  height: 80vh;
+  width: 90%;
+  height: 95%;
   text-align: center;
   box-shadow: inset 0 0 2rem 0px var(--pink);
   padding: 3em;
@@ -93,6 +102,9 @@ dialog > menu {
 dialog > menu > button {
   font-size: 2em;
   padding: .5em 1.5em;
+}
+dialog > h1 {
+  margin-bottom: 2rem;
 }
 
 button {
